tests/sksl/errors/golden/ArgumentCountMismatch.glsl
### Compilation failed:

error: 6: call to 'foo' expected 1 argument, but found 2
1 error
